--- a/kacagiderim_beta/Podfile
+++ b/kacagiderim_beta/Podfile
@@ -15,3 +15,11 @@ end
 target 'kacagiderim_beta' do
 	all_pods
 end
+
+# Workaround for Cocoapods issue #7606
+post_install do |installer|
+    installer.pods_project.build_configurations.each do |config|
+        config.build_settings.delete('CODE_SIGNING_ALLOWED')
+        config.build_settings.delete('CODE_SIGNING_REQUIRED')
+    end
+end
