--- a/kacagiderim_beta/Podfile
+++ b/kacagiderim_beta/Podfile
@@ -10,6 +10,7 @@ def all_pods
     pod 'Alamofire', '~> 4.7'
     pod 'TextFieldEffects'
     pod 'DCKit'
+    pod 'EGFormValidator'
 end
 
 target 'kacagiderim_beta' do
