--- a/kacagiderim_beta/Podfile
+++ b/kacagiderim_beta/Podfile
@@ -8,9 +8,13 @@ def all_pods
     
     # Pods 
     pod 'Alamofire', '~> 4.7'
+    pod 'AlamofireObjectMapper'
+    pod 'AlamofireActivityLogger'
+    pod 'KeychainSwift'
     pod 'TextFieldEffects'
     pod 'DCKit'
     pod 'EGFormValidator'
+    pod 'SwiftGen'
 end
 
 target 'kacagiderim_beta' do
