API Client Changes
Activity indicator and message dialog added.

--- a/kacagiderim_beta/Podfile
+++ b/kacagiderim_beta/Podfile
@@ -13,6 +13,8 @@ def all_pods
     pod 'DCKit'
     pod 'EGFormValidator'
     pod 'SwiftGen'
+    pod 'NVActivityIndicatorView'
+    pod 'Dodo', '~> 11.0'
 end
 
 target 'kacagiderim_beta' do
