--- a/kacagiderim_beta/Podfile
+++ b/kacagiderim_beta/Podfile
@@ -15,6 +15,8 @@ def all_pods
     pod 'SwiftGen'
     pod 'NVActivityIndicatorView'
     pod 'Dodo', '~> 11.0'
+    pod 'CHIPageControl', '~> 0.1.3'
+    pod 'McPicker','~> 0.5.1'
 end
 
 target 'kacagiderim_beta' do
