--- a/kacagiderim_beta/Podfile
+++ b/kacagiderim_beta/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '9.0'
+platform :ios, '10.0'
 
 def all_pods
     # Comment this line if you're not using Swift and don't want to use dynamic frameworks
@@ -17,6 +17,7 @@ def all_pods
     pod 'Dodo', '~> 11.0'
     pod 'CHIPageControl', '~> 0.1.3'
     pod 'McPicker','~> 0.5.1'
+    pod 'CardParts'
 end
 
 target 'kacagiderim_beta' do
