--- a/kacagiderim_beta/Podfile
+++ b/kacagiderim_beta/Podfile
@@ -21,6 +21,7 @@ def all_pods
     pod 'CHIPageControl', '~> 0.1.3'
     pod 'McPicker','~> 0.5.1'
     pod 'CardParts'
+    pod 'Kingfisher', '~> 4.0'
 end
 
 target 'kacagiderim_beta' do
