--- a/kacagiderim_beta/Podfile
+++ b/kacagiderim_beta/Podfile
@@ -17,15 +17,16 @@ def all_pods
     pod 'EGFormValidator'
     pod 'SwiftGen'
     pod 'NVActivityIndicatorView'
-    pod 'Dodo', '~> 11.0'
     pod 'CHIPageControl', '~> 0.1.3'
-    pod 'McPicker','~> 0.5.1'
+    pod 'McPicker', '~> 2.0.0'
     pod 'CardParts'
     pod 'Kingfisher', '~> 4.0'
     pod 'FacebookCore'
     pod 'FacebookLogin'
     pod 'FacebookShare'
     pod 'SwiftEntryKit', '0.8.2'
+    pod 'RxSwift',    '~> 4.0'
+    pod 'RxCocoa',    '~> 4.0'
 end
 
 target 'kacagiderim_beta' do
