Parquet write implementation

--- a/reach-u/reach-u-assignment/src/main/resources/application.properties
+++ b/reach-u/reach-u-assignment/src/main/resources/application.properties
@@ -11,3 +11,7 @@ logging.file=${REACHU_PROJECT_BASE}/logs/reach-u-assignment.log
 # = EXECUTOR SERVICE
 # ===============================
 workerThreadSize=4
+
+# = PARTIOTIONS
+# ===============================
+partition.path=${REACHU_PROJECT_BASE}/partitions
