--- a/reach-u/reach-u-assignment/src/main/resources/application.properties
+++ b/reach-u/reach-u-assignment/src/main/resources/application.properties
@@ -8,10 +8,21 @@ server.port=8080
 logging.level.=INFO
 logging.file=${REACHU_PROJECT_BASE}/logs/reach-u-assignment.log
 
-# = EXECUTOR SERVICE
-# ===============================
-workerThreadSize=4
-
 # = PARTIOTIONS
 # ===============================
 partition.path=${REACHU_PROJECT_BASE}/partitions
+
+# = RABBITMQ
+# ===============================
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=rabbitmq
+spring.rabbitmq.password=1234
+
+# = RABBITMQ
+# Additional RabbitMQ properties
+# ===============================
+spring.rabbitmq.listener.simple.concurrency=4
+spring.rabbitmq.listener.simple.max-concurrency=8
+spring.rabbitmq.listener.simple.retry.initial-interval=5000
+rabbitmq.queue.maxlengthinbytes=1000000000
